<resources>
    <string name="app_name">callAnalytics</string>
    <string name="profile_image_description">contact Image</string>
    <string name="analytics_permission_prompt">App needs your permission to analyze call logs</string>
    <string name="analytics_empty_prompt">No call records to analyse</string>
    <string name="grant_permission">Grant permission</string>
    <string name="typical_call_time">Typical call time:</string>
    <string name="typical_call_duration">Typical call duration:</string>
    <string name="call_rate_prompt">Enter call rate (per second):</string>
    <string name="overall_summary">Overall summary</string>
    <string name="typical_spend">Typically spends %s per call</string>
    <string name="filter">Filter</string>
</resources>
